--- a/index.html
+++ b/index.html
@@ -72,9 +72,7 @@
     </svg>
 </main>
 
-<script src="src/node_modules/jquery/dist/jquery.min.js"></script>
-<script src="src/node_modules/snapsvg/dist/snap.svg-min.js"></script>
-<script src="src/js/app.js"></script>
+<script src="uber.min.js"></script>
 </body>
 
 </html>
