Temporary solution to preview on staging. Need to fix gulp build

--- a/index.html
+++ b/index.html
@@ -63,13 +63,15 @@
         </svg>
     </main>
 
-    <script src="src/node_modules/jquery/dist/jquery.min.js"></script>
+    <!-- <script src="src/node_modules/jquery/dist/jquery.min.js"></script>
     <script src="src/node_modules/snapsvg/dist/snap.svg-min.js"></script>
     <script src="src/node_modules/angular/angular.min.js"></script>
     <script src="src/js/app.js"></script>
     <script src="src/js/ngMapFactory.js"></script>    
     <script src="src/js/ngMap.js"></script>    
     <script src="src/js/ngAnimator.js"></script>    
+    -->
+    <script src="src/js/scripts.js"></script>    
     
 </body>
 </html>
