Hover works but has a few bugs. Saving before I refactor

--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
 <body data-ng-app="uberApp">
     <main data-ng-map>
         <svg id="ngMap" x="0px" y="0px" viewBox="0 0 6000 2000">
-            <g class="trips" data-ng-if="options.heatmap">
-                <path class="trip" data-ng-repeat="trip in trips" data-ng-attr-d="{{trip.path}}"/>
-            </g>
-            <g class="streets">
+            <g id="streets">
                 <path class="street augusta" d="M3775,650v-150"/>
                 <path class="street avenue" d="M4100,200v100"/>
                 <path class="street bathurst" d="M3675,200v1000"/>
@@ -73,10 +70,15 @@
                 <path class="street universityNorthRight" d="M4100,300c0,0,50,0,50,50s0,50,0,100s-50,50-50,50"/>
                 <path class="street yonge" d="M4275,200v1000"/>
             </g>
+            <g id="trips" data-ng-if="options.heatmap">
+                <path class="trip" data-ng-repeat="trip in trips" data-ng-attr-d="{{trip.path}}"/>
+            </g>
+            <g id="highlight"></g>
+            <g id="cars"></g>
         </svg>
     </main>
 
-    <!-- Development Files
+    <!-- Development Files -->
     <script src="src/node_modules/jquery/dist/jquery.min.js"></script>
     <script src="src/node_modules/snapsvg/dist/snap.svg-min.js"></script>
     <script src="src/node_modules/angular/angular.min.js"></script>
@@ -84,10 +86,10 @@
     <script src="src/js/ngMapFactory.js"></script>    
     <script src="src/js/ngMap.js"></script>    
     <script src="src/js/ngAnimator.js"></script>
-    -->
 
-    <!-- Live Files -->
+    <!-- Live Files
     <script src="scripts.js"></script>    
+-->
 
 </body>
 </html>
