--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </svg>
     </main>
 
-    <!-- Development Files -->
+    <!-- Development Files
     <script src="src/node_modules/jquery/dist/jquery.min.js"></script>
     <script src="src/node_modules/snapsvg/dist/snap.svg-min.js"></script>
     <script src="src/node_modules/angular/angular.min.js"></script>
@@ -86,10 +86,10 @@
     <script src="src/js/ngMapFactory.js"></script>    
     <script src="src/js/ngMap.js"></script>    
     <script src="src/js/ngAnimator.js"></script>
+     -->
 
-    <!-- Live Files
+    <!-- Live Files -->
     <script src="scripts.js"></script>    
--->
 
 </body>
 </html>
